--- a/preprocess/conda.yml
+++ b/preprocess/conda.yml
@@ -3,8 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - python=3.8
   - pandas=1.2.3
   - pip=20.3.3
   - pyarrow=2.0
   - pip:
+      - protobuf==3.20
       - wandb==0.10.21
