--- a/random_forest/conda.yml
+++ b/random_forest/conda.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - python=3.8
   - pandas=1.2.3
   - pip=20.3.3
   - scikit-learn=0.24.1
@@ -11,5 +12,6 @@ dependencies:
   - pillow=8.1.2
   - mlflow=1.14.1
   - pip:
+      - protobuf==3.20
       - wandb==0.10.21
       - omegaconf==2.0.6
