--- a/segregate/conda.yml
+++ b/segregate/conda.yml
@@ -3,8 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - python=3.8
   - pandas=1.2.3
   - pip=20.3.3
   - scikit-learn=0.24.1
   - pip:
+      - protobuf==3.20
       - wandb==0.10.21
