--- a/data_analysis/conda.yml
+++ b/data_analysis/conda.yml
@@ -8,6 +8,8 @@ dependencies:
   - jupyterlab=3.1.7
   - seaborn=0.11.1
   - pandas=1.2.3
+  - scikit-learn=0.24.1
+  - matplotlib==3.2.2
   - pip=20.3.3
   #- pandas-profiling=2.11.0
   - pandas-profiling=3.2.0
