--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ main:
   project_name: music_genre_classification # production name: music_genre_classification_prod; add tag prod
   experiment_name: dev
   execute_steps:
-    # In production we don't need all steps, so we can override execute_steps, e.g.:
+    # In production maybe we don't need all steps, so we can override execute_steps, e.g.:
     # mlflow run . -P hydra_options="main.execute_steps='train_random_forest'"
     # mlflow run . -P hydra_options="main.execute_steps='get_data,preprocess'"
     - get_data
@@ -30,7 +30,13 @@ data:
   # in train/test or in train/val
   stratify: genre
 random_forest_pipeline:
+  # Recall we can perform hyperparameter tuning with hydra & mlflow
+  # simply by overriding the parameters with sweeps via the CLI
+  # or defining multiple values in the config.yaml
   random_forest:
+    # This section is passed to the random forest model
+    # as a dictionary of parameters, thus names must match with
+    # the sklearn API.
     # Whenever we have model or other object with many parameters
     # we should write config files for them.
     # That is easier than passing parameters in the code or via CLI
